# github-content-aissistant

./: .env.example  .gitignore  README.md
backend/: background_tasks.py  config.py  config.yaml  main.py  pyproject.toml  routes.py  socket_handlers.py
backend/services/: github_service.py  llm_service.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/app/: layout.js  page.js
frontend/src/components/: AboutInfo.js  AnalysisForm.js  FileFilterControls.js  FileList.js  FileListView.js  RepoConfig.js  ResultsDisplay.js  StatusDisplay.js
frontend/src/hooks/: useAnalysisExecution.js  useAnalysisManager.js  useApiStatus.js  useAppConfig.js  useFileManagement.js
